@@ -1,6 +1,6 @@
 plot.pigengene <- function(x, saveDir=NULL, DiseaseColors=c("red", "cyan"), 
                            fontsize=35, doShowColnames=TRUE, fontsizeCol=25, 
-                           doClusterCols=TRUE, verbose=2, 
+                           doClusterCols=ncol(pigengene$eigengenes)>1, verbose=2,
                            doShowRownames="Auto",
                            pngfactor=max(2, ncol(pigengene$eigengenes)/16),
                            ...){
