@@ -1,6 +1,14 @@
 \name{NEWS}
 \title{News for \R Package \pkg{Pigenegene}}
 
+\section{Changes in version 0.99.25 (2016-10-02)}{
+  \subsection{Changes in existing functions}{
+    \itemize{
+      \item The compute.pigengene() function now uses welch.pvalue() instead of pvalues.manov().
+    }
+  }
+}
+
 \section{Changes in version 0.99.8 (2016-05-18, git f50187c)}{
   \subsection{General}{
     \itemize{
